--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "lergassi/base-slim",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "slim/slim": "4.*",
         "slim/psr7": "^1.2",
